make some visualizations

--- a/boston-house-prices/housing.ipynb
+++ b/boston-house-prices/housing.ipynb
@@ -1276,19 +1276,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(numpy.random.seed(seed))"
+    "type(results)"
    ]
   }
  ],
